[gd_scene load_steps=8 format=2]

[ext_resource path="res://tilesets/basic_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://custom_tile_map/CustomTileMap.gd" type="Script" id=3]
[ext_resource path="res://custom_tile_map/ChunkManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://custom_tile_map/AStarMap.gd" type="Script" id=5]
[ext_resource path="res://custom_tile_map/IsometricTileMapManager.gd" type="Script" id=6]
[ext_resource path="res://custom_tile_map/IsometricTileMap.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 0.5

[node name="IsometricTileMapManager" type="Node2D"]
script = ExtResource( 6 )

[node name="ChunkManager" parent="." instance=ExtResource( 4 )]

[node name="AStarMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 32 )
format = 1
script = ExtResource( 5 )

[node name="MouseCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollision"]
shape = SubResource( 1 )

[node name="TileMaps" type="Node2D" parent="."]

[node name="IsometricTileMap" parent="TileMaps" instance=ExtResource( 7 )]
tileset = ExtResource( 1 )

[node name="CustomTileMap" type="YSort" parent="TileMaps"]
script = ExtResource( 3 )
tileset = ExtResource( 1 )

[node name="CellBoundaries" type="YSort" parent="TileMaps/CustomTileMap"]
visible = false

[node name="Shapes" type="YSort" parent="TileMaps/CustomTileMap"]
visible = false
